--- a/crates/binstalk/Cargo.toml
+++ b/crates/binstalk/Cargo.toml
@@ -18,7 +18,7 @@ binstalk-types = { version = "0.5.0", path = "../binstalk-types" }
 cargo-toml-workspace = { version = "1.0.0", path = "../cargo-toml-workspace" }
 command-group = { version = "2.1.0", features = ["with-tokio"] }
 compact_str = { version = "0.7.0", features = ["serde"] }
-detect-targets = { version = "0.1.11", path = "../detect-targets" }
+detect-targets = { version = "0.1.11", path = "../detect-targets", features = ["tracing"] }
 either = "1.8.1"
 itertools = "0.11.0"
 jobslot = { version = "0.2.11", features = ["tokio"] }
