--- a/crates/detect-targets/Cargo.toml
+++ b/crates/detect-targets/Cargo.toml
@@ -11,10 +11,14 @@ license = "Apache-2.0 OR MIT"
 
 [dependencies]
 tokio = { version = "1.28.2", features = ["rt", "process", "sync"], default-features = false }
-tracing = "0.1.37"
-tracing-subscriber = { version = "0.3.17", features = ["fmt"], default-features = false }
+tracing = { version = "0.1.37", optional = true }
+tracing-subscriber = { version = "0.3.17", features = ["fmt"], default-features = false, optional = true }
 cfg-if = "1.0.0"
 guess_host_triple = "0.1.3"
+
+[features]
+tracing = ["dep:tracing"]
+cli-logging = ["tracing", "dep:tracing-subscriber"]
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows-sys = { version = "0.48.0", features = ["Win32_System_Threading", "Win32_System_SystemInformation", "Win32_Foundation"] }
