--- a/crates/binstalk-fetchers/Cargo.toml
+++ b/crates/binstalk-fetchers/Cargo.toml
@@ -24,6 +24,7 @@ leon-macros = { version = "1.0.0", path = "../leon-macros" }
 miette = "5.9.0"
 minisign-verify = "0.2.1"
 once_cell = "1.18.0"
+serde = { version = "1.0.163", optional = true }
 strum = "0.25.0"
 thiserror = "1.0.40"
 tokio = { version = "1.30.0", features = ["rt", "sync"], default-features = false }
@@ -35,7 +36,7 @@ binstalk-downloader = { version = "0.9.1", path = "../binstalk-downloader" }
 
 [features]
 quickinstall = []
-dist-manifest = ["dep:cargo-dist-schema"]
+dist-manifest = ["dep:cargo-dist-schema", "dep:serde"]
 
 [package.metadata.docs.rs]
 rustdoc-args = ["--cfg", "docsrs"]
